First flink contract tests for cepstate